--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h1>Welcome to My AI & Data Science Space! 🚀</h1>
-        <p>Hey there! I'm Daniel Glownia, a passionate Data Scientist and AI enthusiast. I love working with large-scale data, bioinformatics, and machine learning models.</p>
+        <p>Hey there! I'm Daniel Glownia, a passionate Data Scientist and Software Engineer. I love working with large-scale data, bioinformatics, and machine learning models.</p>
         <p>Check out my work on:</p>
         <div class="links">
             <a href="https://github.com/danielglownia" target="_blank"><i class="fab fa-github"></i></a>
